<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openjfx</groupId>
    <artifactId>sample</artifactId>
    <version>1.0.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23.0.2</version>
        </dependency>
	<dependency>
 	   <groupId>com.cs321</groupId>
		<artifactId>workflow</artifactId>
		<version>1.0-SNAPSHOT</version>
<!-- Remove the 2 lines after here for scope and systempath if they are in your POM -->
	</dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
<!-- Updated release to match -->
                    <release>21</release>
<!-- Add this section -->
        <compilerArgs>
            <arg>--add-reads</arg>
            <arg>org.openjfx=ALL-UNNAMED</arg>
        </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <configuration>
                    <mainClass>org.openjfx.Login</mainClass>
<!-- Add this section -->
       <options>
            <option>--add-modules</option>
            <option>javafx.controls</option>
            <option>--add-opens</option>
            <option>java.base/java.lang=ALL-UNNAMED</option>
        </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>